@@ -1,3 +1,3 @@
 [D-BUS Service]
 Name=net.launchpad.zim.plugins.gnomeshellsearch.provider
-Exec=/usr/bin/zim --plugin gnomeshellsearch
+Exec=@INSTALLDIR@/bin/zim --plugin gnomeshellsearch
